<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">billSplitter</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="dummyLogo">LOGO</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_text">Login</string>
    <string name="create_text">Create</string>
    <string name="title_create">Create an Account</string>
    <string name="email">Email</string>
    <string name="emailInfo">You must use an email address that is associated with a PayPal account</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="submit">Submit</string>
    <string name="repassword">Re-Type Password</string>
    <string name="forgot_password">Forgot Your Password?</string>
    <string name="action_add">Add Friends</string>
    <string name="create_bill">Create A Bill</string>
    <string name="add_friends">Add Friends</string>
    <string name="dummyText">Dummy Text</string>
    <string name="dummyMoneyText">$0.00</string>
    <string name="dummyDate">10-22-15</string>
    <string name="pay">Pay</string>
    <string name="bill_due">Set Bill Due Date</string>
    <string name="bill_to">Bill To</string>
    <string name="amount">Amount</string>
    <string name="split">Split Check (optional)</string>
    <string name="send_bill">Send Bill</string>
    <string name="message">Message</string>
    <string name="selectContact">Who would you like to bill</string>
    <string name="sign_out">Sign out</string>
    <string name="addToBill">Add Number to Bill</string>
    <string name="fullName">Full Name</string>
    <string name="splitText">Step 3. Split bill between added contacts?</string>
    <string name="contactSection">Step 1. Add Numbers to Bill</string>
    <string name="billingSection">Step 2. Billing Information</string>
    <string name="cancel">Cancel</string>
    <string name="refund">Refund</string>
    <string name="accept">Accept</string>
    <string name="delete">Delete</string>


    <string-array name="spinner_stuff">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

</resources>
