<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummyLogo"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emailInfo"
        android:textColor="@android:color/black"
        android:layout_marginTop="16dp"/>


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fullName"
                android:id="@+id/fullNameText"
                android:layout_marginTop="16dp"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:id="@+id/usernameSignUpText"
                android:layout_marginTop="16dp"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:id="@+id/emailText"
                android:layout_marginTop="16dp"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phoneNumber"
                android:id="@+id/phoneText"
                android:layout_marginTop="16dp"
                android:inputType="phone"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:password="true"
                android:hint="@string/password"
                android:id="@+id/createPasswordText"
                android:layout_marginTop="16dp"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:password="true"
                android:hint="@string/repassword"
                android:id="@+id/reTypePasswordText"
                android:layout_marginTop="16dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:id="@+id/submitButton"
                android:layout_marginTop="20dp"/>
        </LinearLayout>

    </ScrollView>






</LinearLayout>