<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/billNameText"
        android:text="@string/dummyText"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:textColor="@android:color/black"
        android:textSize="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:weightSum="1.0"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/billMoneyText"
            android:textSize="15dp"
            android:text="@string/dummyMoneyText"
            android:layout_weight=".33"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/billDateOwed"
            android:text="@string/dummyDate"
            android:textSize="15dp"
            android:layout_weight=".33"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/messageText"
            android:text="@string/dummyDate"
            android:textSize="15dp"
            android:layout_weight=".33"/>

    </LinearLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/deleteButton"
            android:background="@android:color/holo_red_light"
            android:text="@string/delete"
            android:textColor="@android:color/white"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"/>


</LinearLayout>